tests/snapshots/e2e__dump@large-estate.snap
---
source: tests/e2e.rs
expression: projection
---
{
  "actions": [
    {
      "id": ".github/actions/publish-artifact",
      "kind": "composite"
    },
    {
      "id": ".github/actions/setup-build",
      "kind": "composite"
    }
  ],
  "externals": [
    {
      "gitref": "v4",
      "owner": "actions",
      "repo": "checkout",
      "subpath": null
    },
    {
      "gitref": "v4",
      "owner": "actions",
      "repo": "dependency-review-action",
      "subpath": null
    },
    {
      "gitref": "v5",
      "owner": "actions",
      "repo": "labeler",
      "subpath": null
    },
    {
      "gitref": "v9",
      "owner": "actions",
      "repo": "stale",
      "subpath": null
    },
    {
      "gitref": "v3",
      "owner": "github",
      "repo": "codeql-action",
      "subpath": "analyze"
    },
    {
      "gitref": "v3",
      "owner": "github",
      "repo": "codeql-action",
      "subpath": "init"
    },
    {
      "gitref": "v7",
      "owner": "peter-evans",
      "repo": "create-pull-request",
      "subpath": null
    }
  ],
  "schema_version": 10,
  "workflows": [
    {
      "id": ".github/workflows/_reusable-build.yml",
      "jobs": [
        {
          "calls_secrets": null,
          "calls_workflow": null,
          "id": "build",
          "step_uses_kinds": [
            "external",
            "localaction"
          ]
        }
      ],
      "name": "Reusable Build",
      "triggers": [
        "workflow_call"
      ]
    },
    {
      "id": ".github/workflows/_reusable-publish.yml",
      "jobs": [
        {
          "calls_secrets": null,
          "calls_workflow": null,
          "id": "publish",
          "step_uses_kinds": [
            "external",
            "localaction"
          ]
        }
      ],
      "name": "Reusable Publish",
      "triggers": [
        "workflow_call"
      ]
    },
    {
      "id": ".github/workflows/audit.yml",
      "jobs": [
        {
          "calls_secrets": null,
          "calls_workflow": null,
          "id": "audit",
          "step_uses_kinds": [
            "external"
          ]
        }
      ],
      "name": "Audit",
      "triggers": [
        "schedule"
      ]
    },
    {
      "id": ".github/workflows/bench.yml",
      "jobs": [
        {
          "calls_secrets": null,
          "calls_workflow": null,
          "id": "bench",
          "step_uses_kinds": [
            "external",
            "localaction"
          ]
        }
      ],
      "name": "Bench",
      "triggers": [
        "schedule"
      ]
    },
    {
      "id": ".github/workflows/ci.yml",
      "jobs": [
        {
          "calls_secrets": "inherit",
          "calls_workflow": "local:.github/workflows/_reusable-build.yml",
          "id": "call-build",
          "step_uses_kinds": []
        }
      ],
      "name": "CI",
      "triggers": [
        "pull_request",
        "push"
      ]
    },
    {
      "id": ".github/workflows/codeql.yml",
      "jobs": [
        {
          "calls_secrets": null,
          "calls_workflow": null,
          "id": "analyze",
          "step_uses_kinds": [
            "external",
            "external",
            "external"
          ]
        }
      ],
      "name": "CodeQL",
      "triggers": [
        "schedule"
      ]
    },
    {
      "id": ".github/workflows/dispatch.yml",
      "jobs": [
        {
          "calls_secrets": null,
          "calls_workflow": null,
          "id": "dispatch",
          "step_uses_kinds": [
            "external"
          ]
        }
      ],
      "name": "Dispatch",
      "triggers": [
        "workflow_dispatch"
      ]
    },
    {
      "id": ".github/workflows/docs.yml",
      "jobs": [
        {
          "calls_secrets": null,
          "calls_workflow": null,
          "id": "docs",
          "step_uses_kinds": [
            "external"
          ]
        }
      ],
      "name": "Docs",
      "triggers": [
        "push"
      ]
    },
    {
      "id": ".github/workflows/format.yml",
      "jobs": [
        {
          "calls_secrets": null,
          "calls_workflow": null,
          "id": "format",
          "step_uses_kinds": [
            "external"
          ]
        }
      ],
      "name": "Format",
      "triggers": [
        "pull_request"
      ]
    },
    {
      "id": ".github/workflows/labeler.yml",
      "jobs": [
        {
          "calls_secrets": null,
          "calls_workflow": null,
          "id": "label",
          "step_uses_kinds": [
            "external"
          ]
        }
      ],
      "name": "Labeler",
      "triggers": [
        "pull_request_target"
      ]
    },
    {
      "id": ".github/workflows/lint.yml",
      "jobs": [
        {
          "calls_secrets": null,
          "calls_workflow": null,
          "id": "lint",
          "step_uses_kinds": [
            "external"
          ]
        }
      ],
      "name": "Lint",
      "triggers": [
        "pull_request"
      ]
    },
    {
      "id": ".github/workflows/nightly.yml",
      "jobs": [
        {
          "calls_secrets": null,
          "calls_workflow": null,
          "id": "nightly",
          "step_uses_kinds": [
            "external",
            "localaction"
          ]
        }
      ],
      "name": "Nightly",
      "triggers": [
        "schedule"
      ]
    },
    {
      "id": ".github/workflows/release.yml",
      "jobs": [
        {
          "calls_secrets": "inherit",
          "calls_workflow": "local:.github/workflows/_reusable-publish.yml",
          "id": "call-publish",
          "step_uses_kinds": []
        }
      ],
      "name": "Release",
      "triggers": [
        "push"
      ]
    },
    {
      "id": ".github/workflows/security.yml",
      "jobs": [
        {
          "calls_secrets": null,
          "calls_workflow": null,
          "id": "scan",
          "step_uses_kinds": [
            "external",
            "external"
          ]
        }
      ],
      "name": "Security",
      "triggers": [
        "schedule"
      ]
    },
    {
      "id": ".github/workflows/smoke.yml",
      "jobs": [
        {
          "calls_secrets": null,
          "calls_workflow": null,
          "id": "smoke",
          "step_uses_kinds": [
            "external"
          ]
        }
      ],
      "name": "Smoke",
      "triggers": [
        "workflow_dispatch"
      ]
    },
    {
      "id": ".github/workflows/snapshot.yml",
      "jobs": [
        {
          "calls_secrets": null,
          "calls_workflow": null,
          "id": "snapshot",
          "step_uses_kinds": [
            "external",
            "localaction"
          ]
        }
      ],
      "name": "Snapshot",
      "triggers": [
        "schedule"
      ]
    },
    {
      "id": ".github/workflows/stale.yml",
      "jobs": [
        {
          "calls_secrets": null,
          "calls_workflow": null,
          "id": "stale",
          "step_uses_kinds": [
            "external"
          ]
        }
      ],
      "name": "Stale",
      "triggers": [
        "schedule"
      ]
    },
    {
      "id": ".github/workflows/test-integration.yml",
      "jobs": [
        {
          "calls_secrets": null,
          "calls_workflow": null,
          "id": "integration",
          "step_uses_kinds": [
            "external",
            "localaction"
          ]
        }
      ],
      "name": "Test Integration",
      "triggers": [
        "push"
      ]
    },
    {
      "id": ".github/workflows/test-unit.yml",
      "jobs": [
        {
          "calls_secrets": null,
          "calls_workflow": null,
          "id": "unit",
          "step_uses_kinds": [
            "external",
            "localaction"
          ]
        }
      ],
      "name": "Test Unit",
      "triggers": [
        "push"
      ]
    },
    {
      "id": ".github/workflows/typecheck.yml",
      "jobs": [
        {
          "calls_secrets": null,
          "calls_workflow": null,
          "id": "typecheck",
          "step_uses_kinds": [
            "external"
          ]
        }
      ],
      "name": "Typecheck",
      "triggers": [
        "pull_request"
      ]
    },
    {
      "id": ".github/workflows/update-cares.yml",
      "jobs": [
        {
          "calls_secrets": null,
          "calls_workflow": null,
          "id": "check-update",
          "step_uses_kinds": [
            "external",
            "external"
          ]
        }
      ],
      "name": "Update cares",
      "triggers": [
        "schedule",
        "workflow_dispatch"
      ]
    },
    {
      "id": ".github/workflows/update-curl.yml",
      "jobs": [
        {
          "calls_secrets": null,
          "calls_workflow": null,
          "id": "check-update",
          "step_uses_kinds": [
            "external",
            "external"
          ]
        }
      ],
      "name": "Update curl",
      "triggers": [
        "schedule",
        "workflow_dispatch"
      ]
    },
    {
      "id": ".github/workflows/update-icu.yml",
      "jobs": [
        {
          "calls_secrets": null,
          "calls_workflow": null,
          "id": "check-update",
          "step_uses_kinds": [
            "external",
            "external"
          ]
        }
      ],
      "name": "Update icu",
      "triggers": [
        "schedule",
        "workflow_dispatch"
      ]
    },
    {
      "id": ".github/workflows/update-libffi.yml",
      "jobs": [
        {
          "calls_secrets": null,
          "calls_workflow": null,
          "id": "check-update",
          "step_uses_kinds": [
            "external",
            "external"
          ]
        }
      ],
      "name": "Update libffi",
      "triggers": [
        "schedule",
        "workflow_dispatch"
      ]
    },
    {
      "id": ".github/workflows/update-openssl.yml",
      "jobs": [
        {
          "calls_secrets": null,
          "calls_workflow": null,
          "id": "check-update",
          "step_uses_kinds": [
            "external",
            "external"
          ]
        }
      ],
      "name": "Update openssl",
      "triggers": [
        "schedule",
        "workflow_dispatch"
      ]
    },
    {
      "id": ".github/workflows/update-sqlite.yml",
      "jobs": [
        {
          "calls_secrets": null,
          "calls_workflow": null,
          "id": "check-update",
          "step_uses_kinds": [
            "external",
            "external"
          ]
        }
      ],
      "name": "Update sqlite",
      "triggers": [
        "schedule",
        "workflow_dispatch"
      ]
    },
    {
      "id": ".github/workflows/update-zlib.yml",
      "jobs": [
        {
          "calls_secrets": null,
          "calls_workflow": null,
          "id": "check-update",
          "step_uses_kinds": [
            "external",
            "external"
          ]
        }
      ],
      "name": "Update zlib",
      "triggers": [
        "schedule",
        "workflow_dispatch"
      ]
    },
    {
      "id": ".github/workflows/update-zstd.yml",
      "jobs": [
        {
          "calls_secrets": null,
          "calls_workflow": null,
          "id": "check-update",
          "step_uses_kinds": [
            "external",
            "external"
          ]
        }
      ],
      "name": "Update zstd",
      "triggers": [
        "schedule",
        "workflow_dispatch"
      ]
    }
  ]
}
