tests/snapshots/e2e__dump@minimal-estate.snap
---
source: tests/e2e.rs
expression: projection
---
{
  "actions": [],
  "externals": [
    {
      "gitref": "v4",
      "owner": "actions",
      "repo": "checkout",
      "subpath": null
    },
    {
      "gitref": "v4",
      "owner": "actions",
      "repo": "setup-node",
      "subpath": null
    }
  ],
  "schema_version": 10,
  "workflows": [
    {
      "id": ".github/workflows/ci.yml",
      "jobs": [
        {
          "calls_secrets": null,
          "calls_workflow": null,
          "id": "test",
          "step_uses_kinds": [
            "external",
            "external"
          ]
        }
      ],
      "name": "CI",
      "triggers": [
        "pull_request",
        "push"
      ]
    }
  ]
}
