tests/snapshots/e2e__dump@mixed-action-types.snap
---
source: tests/e2e.rs
expression: projection
---
{
  "actions": [
    {
      "id": ".github/actions/unused-composite",
      "kind": "composite"
    },
    {
      "id": ".github/actions/unused-docker",
      "kind": "docker"
    },
    {
      "id": ".github/actions/unused-js",
      "kind": "javascript:node20"
    }
  ],
  "externals": [
    {
      "gitref": "v4",
      "owner": "actions",
      "repo": "checkout",
      "subpath": null
    }
  ],
  "schema_version": 10,
  "workflows": [
    {
      "id": ".github/workflows/ci.yml",
      "jobs": [
        {
          "calls_secrets": null,
          "calls_workflow": null,
          "id": "build",
          "step_uses_kinds": [
            "external"
          ]
        }
      ],
      "name": "CI",
      "triggers": [
        "push"
      ]
    }
  ]
}
