tests/snapshots/e2e__dump@needs-outputs-conditional.snap
---
source: tests/e2e.rs
expression: projection
---
{
  "actions": [],
  "externals": [
    {
      "gitref": "v4",
      "owner": "actions",
      "repo": "checkout",
      "subpath": null
    }
  ],
  "schema_version": 10,
  "workflows": [
    {
      "id": ".github/workflows/ci.yml",
      "jobs": [
        {
          "calls_secrets": null,
          "calls_workflow": null,
          "id": "detect",
          "step_uses_kinds": [
            "external"
          ]
        },
        {
          "calls_secrets": null,
          "calls_workflow": null,
          "id": "build",
          "step_uses_kinds": [
            "external"
          ]
        },
        {
          "calls_secrets": null,
          "calls_workflow": null,
          "id": "publish",
          "step_uses_kinds": []
        }
      ],
      "name": "CI",
      "triggers": [
        "pull_request",
        "push"
      ]
    }
  ]
}
