tests/snapshots/e2e__dump@secrets-explicit-chain.snap
---
source: tests/e2e.rs
expression: projection
---
{
  "actions": [],
  "externals": [],
  "schema_version": 10,
  "workflows": [
    {
      "id": ".github/workflows/caller.yml",
      "jobs": [
        {
          "calls_secrets": null,
          "calls_workflow": "local:.github/workflows/mid.yml",
          "id": "call",
          "step_uses_kinds": []
        }
      ],
      "name": "Caller",
      "triggers": [
        "push"
      ]
    },
    {
      "id": ".github/workflows/leaf.yml",
      "jobs": [
        {
          "calls_secrets": null,
          "calls_workflow": null,
          "id": "consume",
          "step_uses_kinds": []
        }
      ],
      "name": "Leaf",
      "triggers": [
        "workflow_call"
      ]
    },
    {
      "id": ".github/workflows/mid.yml",
      "jobs": [
        {
          "calls_secrets": null,
          "calls_workflow": "local:.github/workflows/leaf.yml",
          "id": "forward",
          "step_uses_kinds": []
        }
      ],
      "name": "Mid",
      "triggers": [
        "workflow_call"
      ]
    }
  ]
}
