tests/snapshots/e2e__dump@services-postgres.snap
---
source: tests/e2e.rs
expression: projection
---
{
  "actions": [],
  "externals": [
    {
      "gitref": "v4",
      "owner": "actions",
      "repo": "checkout",
      "subpath": null
    },
    {
      "gitref": "v4",
      "owner": "actions",
      "repo": "setup-node",
      "subpath": null
    }
  ],
  "schema_version": 10,
  "workflows": [
    {
      "id": ".github/workflows/integration.yml",
      "jobs": [
        {
          "calls_secrets": null,
          "calls_workflow": null,
          "id": "integration",
          "step_uses_kinds": [
            "external",
            "external"
          ]
        }
      ],
      "name": "Integration",
      "triggers": [
        "pull_request",
        "push"
      ]
    }
  ]
}
