tests/snapshots/e2e__dump@step-if-guard.snap
---
source: tests/e2e.rs
assertion_line: 292
expression: projection
---
{
  "actions": [],
  "externals": [
    {
      "gitref": "v4",
      "owner": "actions",
      "repo": "cache",
      "subpath": null
    },
    {
      "gitref": "v4",
      "owner": "actions",
      "repo": "checkout",
      "subpath": null
    },
    {
      "gitref": "v4",
      "owner": "actions",
      "repo": "setup-node",
      "subpath": null
    }
  ],
  "schema_version": 10,
  "workflows": [
    {
      "id": ".github/workflows/ci.yml",
      "jobs": [
        {
          "calls_secrets": null,
          "calls_workflow": null,
          "id": "combined",
          "step_uses_kinds": [
            "external"
          ]
        },
        {
          "calls_secrets": null,
          "calls_workflow": null,
          "id": "step-only",
          "step_uses_kinds": [
            "external"
          ]
        },
        {
          "calls_secrets": null,
          "calls_workflow": null,
          "id": "unconditional",
          "step_uses_kinds": [
            "external"
          ]
        }
      ],
      "name": "Step-if guard demo",
      "triggers": [
        "push"
      ]
    }
  ]
}
